symbol-factory: Implement symbol factory (parts)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,7 @@ set (CMAKE_BUILD_TYPE debug)
 set (${TGT}_SRCS
 	src/disassembly.cc
 	src/elf.cc
+	src/symbolfactory.cc
 	src/utils.cc
 	target/main.cc
 	)
