--- a/tests/unit-tests/CMakeLists.txt
+++ b/tests/unit-tests/CMakeLists.txt
@@ -39,6 +39,8 @@ include_directories(
 	${LIBCRPCUT_INCLUDE_DIRS}
 	)
 
+add_executable (test-binary test-elf.cc)
+
 add_executable (${TGT} ${${TGT}_SRCS})
 target_link_libraries(${TGT}
 	${LIBELF_LIBRARIES}
