unit test: add (basic) test for the disassembler

--- a/tests/unit-tests/CMakeLists.txt
+++ b/tests/unit-tests/CMakeLists.txt
@@ -27,6 +27,7 @@ set (${TGT}_SRCS
 	../../src/symbolfactory.cc
 	../../src/utils.cc
 	main.cc
+	tests/tests-disassembly.cc
 	tests/tests-symbol-provider.cc
 	)
 
