build/disassembly: Check if libbfd is built as multiarch

--- a/tests/unit-tests/CMakeLists.txt
+++ b/tests/unit-tests/CMakeLists.txt
@@ -21,6 +21,11 @@ find_package (LibCRPCUT REQUIRED)
 set (TGT ut)
 
 set (CMAKE_CXX_FLAGS "-std=c++0x -Wall -D_GLIBCXX_USE_NANOSLEEP -DPACKAGE=emilpro -DPACKAGE_VERSION=1")
+
+if (HAVE_BFD_MULTIARCH)
+	set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DHAVE_BFD_MULTIARCH")
+endif (HAVE_BFD_MULTIARCH)
+
 set (CMAKE_BUILD_TYPE debug)
 
 set (${TGT}_SRCS
