--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,10 @@ set (CMAKE_MODULE_PATH  ${CMAKE_MODULE_PATH}
 
 set (CMAKE_CXX_FLAGS "-std=c++0x -Wall -D_GLIBCXX_USE_NANOSLEEP -DPACKAGE=emilpro -DPACKAGE_VERSION=1")
 
+if (HAVE_BFD_MULTIARCH)
+	set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DHAVE_BFD_MULTIARCH")
+endif (HAVE_BFD_MULTIARCH)
+
 set (TGT emilpro)
 
 set (CMAKE_BUILD_TYPE debug)
