model: Add (parts of) a model implementation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,7 @@ set (${TGT}_SRCS
 	src/architecturefactory.cc
 	src/disassembly.cc
 	src/elf.cc
+	src/model.cc
 	src/symbolfactory.cc
 	src/utils.cc
 	target/main.cc
