--- a/tests/unit-tests/CMakeLists.txt
+++ b/tests/unit-tests/CMakeLists.txt
@@ -34,9 +34,9 @@ set (CMAKE_BUILD_TYPE debug)
 set (${TGT}_SRCS
 	../../src/architecturefactory.cc
 	../../src/bfd-provider.cc
-	../../src/disassembly.cc
 	../../src/gtk/hexview.cc
 	../../src/jumptargetdisplay.cc
+	../../src/opdis-disassembly.cc
 	../../src/symbolfactory.cc
 	../../src/utils.cc
 	main.cc
