emilpro: Add init/destroy class and some config stuff

--- a/tests/unit-tests/CMakeLists.txt
+++ b/tests/unit-tests/CMakeLists.txt
@@ -35,6 +35,8 @@ set (${TGT}_SRCS
 	../../src/architecturefactory.cc
 	../../src/bfd-disassembly.cc
 	../../src/bfd-provider.cc
+	../../src/configuration.cc
+	../../src/emilpro.cc
 	../../src/gtk/hexview.cc
 	../../src/jumptargetdisplay.cc
 	../../src/symbolfactory.cc
