gui: Break out source and instruction views from main.cc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,7 +81,9 @@ set (BASE_SRCS
 set (GUI_SRCS
 	src/gtk/hexview.cc
 	src/gtk/infobox.cc
+	src/gtk/instructionview.cc
 	src/gtk/main.cc
+	src/gtk/sourceview.cc
 	)
 	
 set_property(SOURCE src/gtk/main.cc APPEND PROPERTY OBJECT_DEPENDS ${CMAKE_BINARY_DIR}/emilpro_glade.hh)
