network-listener: Add class that saves instruction models arriving from the server
The server part is not finished though.

--- a/tests/unit-tests/CMakeLists.txt
+++ b/tests/unit-tests/CMakeLists.txt
@@ -38,6 +38,7 @@ set (${TGT}_SRCS
 	../../src/emilpro.cc
 	../../src/gtk/hexview.cc
 	../../src/jumptargetdisplay.cc
+	../../src/network-listener.cc
 	../../src/symbolfactory.cc
 	../../src/utils.cc
 	../../src/xmlfactory.cc
@@ -48,6 +49,7 @@ set (${TGT}_SRCS
 	tests/tests-instructionfactory.cc
 	tests/tests-jumptargetdisplay.cc
 	tests/tests-model.cc
+	tests/tests-network-listener.cc
 	tests/tests-symbol-provider.cc
 	tests/tests-utils.cc
 	tests/tests-xmlfactory.cc
