server: Initialize server and send the timestamps on connect
Again, untested. As usual.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,6 +73,7 @@ set (BASE_SRCS
 	src/instructionfactory.cc
 	src/jumptargetdisplay.cc
 	src/model.cc
+	src/server-connection.cc
 	src/symbolfactory.cc
 	src/utils.cc
 	src/xmlfactory.cc
