preferences: Implement preferences class and tests for it

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,6 +78,7 @@ set (BASE_SRCS
 	src/jumptargetdisplay.cc
 	src/model.cc
 	src/network-listener.cc
+	src/preferences.cc
 	src/server-connection.cc
 	src/symbolfactory.cc
 	src/utils.cc
