--- a/tests/unit-tests/CMakeLists.txt
+++ b/tests/unit-tests/CMakeLists.txt
@@ -40,6 +40,7 @@ set (${TGT}_SRCS
 	../../src/gtk/hexview.cc
 	../../src/jumptargetdisplay.cc
 	../../src/network-listener.cc
+	../../src/preferences.cc
 	../../src/symbolfactory.cc
 	../../src/utils.cc
 	../../src/xmlfactory.cc
@@ -52,6 +53,7 @@ set (${TGT}_SRCS
 	tests/tests-jumptargetdisplay.cc
 	tests/tests-model.cc
 	tests/tests-network-listener.cc
+	tests/tests-preferences.cc
 	tests/tests-server-connection.cc
 	tests/tests-symbol-provider.cc
 	tests/tests-utils.cc
