build: Build release

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,7 +34,7 @@ if (HAVE_BFD_MULTIARCH)
 	set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DHAVE_BFD_MULTIARCH")
 endif (HAVE_BFD_MULTIARCH)
 
-set (CMAKE_BUILD_TYPE debug)
+set (CMAKE_BUILD_TYPE release)
 
 file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/tools)
 file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/server)
