server: Add empty disassembler to reduce size
43 -> 34MB

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -64,7 +64,7 @@ add_custom_target(emilpro_built_in_instruction_models ALL
 set (BASE_SRCS
 	../src/addresshistory.cc
 	../src/architecturefactory.cc
-	../src/bfd-disassembly.cc
+	../src/null-disassembly.cc
 	../src/bfd-provider.cc
 	../src/configuration.cc
 	../src/emilpro.cc
@@ -116,7 +116,6 @@ set_property(TARGET server/cgi-server APPEND PROPERTY OBJECT_DEPENDS binutils)
 
 set (BASE_LIBS
 	${LIBELF_LIBRARIES}
-	${CMAKE_BINARY_DIR}/install-binutils/lib/libopcodes.a
 	${CMAKE_BINARY_DIR}/install-binutils/lib/libbfd.a
 	${CMAKE_BINARY_DIR}/install-binutils/lib/libiberty.a
 	${LIBXMLPP_LIBRARIES}
